testsuite/poke.pkl/offset-diag-1.pk
/* { dg-do compile } */

var a =
  "foo"#B; /* { dg-error "expected integer" } */
